fix: navbar brand not showing up on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1807,7 +1807,7 @@ input[type=search]::-webkit-search-cancel-button {
   .dashboard-admin__grid {
     grid-template-columns: repeat(2, 1fr);
   }
-  .navbar-brand {
+  .navbar-dark .navbar-brand {
     display: none !important;
   }
 }
