--- a/public/scss/responsives/_tablet.scss
+++ b/public/scss/responsives/_tablet.scss
@@ -208,8 +208,10 @@
         }
     }
 
-    .navbar-brand {
-        display: none !important;
+    .navbar-dark {
+        .navbar-brand {
+            display: none !important;
+        }
     }
 }
 
